--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,79 @@
     box-sizing: border-box;
 }
 
+:root {
+    --colorDarkWhite: #FAF7F0; 
+}
+
 .App{
     height: 100vh;
     width: 100vw;
+    display: flex;
 }
 
-.home {
+.home-container {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-image: url("/images/pokeball.gif");   
     background-repeat: no-repeat;
     background-size: 100% 100%;
+   
+    
 }
+
+    .home {
+        width: 30%;
+        height: 30%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        
+    }
+
+        .home:hover{
+            
+        }
+
+        .home > form {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 10%;
+             
+        }
+
+            .home > form > input {
+                width: 90%;
+                height: 20%;
+                text-align: center;
+                font-weight: bolder;
+                font-size: xx-large;
+                border-radius: 20px;
+                background-color: transparent;
+                color: var(--colorDarkWhite);
+                font-family: verdana;
+                font-weight: lighter;
+            }
+
+            .home > form > button {
+                width: 50%;
+                height: 20%;
+                border-radius: 20px;
+                font-family: verdana;
+                font-size: xx-large;
+                background-color: transparent;
+                color: var(--colorDarkWhite);
+                transition: 0.5s ease-in-out;
+            }
+
+                .home > form > button:hover {
+                    background-image: url("/images/poke-intro.gif");
+                    transition: 0.5s ease-in-out;
+                    color: transparent;
+                }
