--- a/src/index.css
+++ b/src/index.css
@@ -86,11 +86,6 @@
                 }
 
 
-    .pressed {
-        background-color: blue;
-        color: white;
-        }
-
 .pokedex {
     width: 100vw;
     height: 100vh;
@@ -156,7 +151,7 @@
             align-items: center;
             color: var(--colorDarkWhite);
             font-size: x-large;
-            margin-top: 7%;
+            margin-top: 15%;
             
         }
 
@@ -227,17 +222,97 @@
     }
 
         .poke-card-wrapper {
-            
             width: 100%;
             height: 80%;
             align-self:flex-end;
             padding: 2%;
             overflow-y: scroll;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            
         }
+
+            .pokecard {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                height: 20%;
+                width: 20%;
+                padding: 1%;
+                border-radius: 20px;
+                transition: 0.5s ease-in-out;
+            }
+
+                .pokecard:hover {
+                    background-color: rgba(0,0,0,0.1);
+                    transition: 0.5s ease-in-out;
+                }
+
+                .pokecard:hover > h1 {
+                    opacity: 100%;
+                    transition: 1s ease-in-out;
+                    
+                }
+
+
+                .pokecard > img {
+                    height: 80%;
+                    
+                }
+
+                    .pokecard > img:hover {
+                        cursor: pointer;
+                    }
+
+                       
+
+                .pokecard > h1 {
+                    font-family: verdana;
+                    font-weight: lighter;
+                    font-size: medium;
+                    opacity: 0;
+                    transition: 1s ease-in-out;
+                }
 
         .pagination-wrapper {
             display: flex;
             justify-content: center;
             padding: 1%;
+            width: 100%;
+            
         }
+
+            .pagination-buttons {
+                height: 80%;
+                width: 100%;
+                
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-evenly;
+
+            }
+
+                .pagination-buttons > button {
+                    border-radius: 50%;
+                    height: 100%;
+                    width: 5%;
+                    padding: 0.5%;
+                    margin-left: 1%;
+                    border: transparent;
+                    cursor: pointer;
+                    transition: 0.5s ease-in;
+                }
+
+
+
+                .pressed {
+                    background-color: var(--pokedexRed);
+                    color: white;
+                    transition: 0.5s ease-in;
+
+                }
+
+       
                   
