--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
     display: flex;
 }
 
+li {
+    list-style: none;
+}
+
 .home-container {
     width: 100%;
     height: 100%;
@@ -339,8 +343,23 @@
 /*Styles for the scroll bar end here*/  
 
 .pokedex-id-wrapper {
+    display: flex;
     width: 100%;
     height: 100%;
     
 }
+
+    .pokedex-id-wrapper-moves-wrapper {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        align-content: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        width: 10%;
+        padding: 1%;
+        border: solid red;
+    }
                   
