--- a/src/index.css
+++ b/src/index.css
@@ -360,6 +360,6 @@ li {
         overflow-x: hidden;
         width: 10%;
         padding: 1%;
-        border: solid red;
+        border: solid rgb(209, 86, 86);
     }
                   
