--- a/src/index.css
+++ b/src/index.css
@@ -499,4 +499,49 @@ li {
                 font-weight: lighter;
                 font-size: large;
             }
+
+.notfound-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    gap: 5%;
+    background-image: url("../public/images/intro-poke.gif");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+    .notfound-wrapper-img {
+        width: 40%;
+        height: 50%;
+        flex-wrap: wrap;
+    }
+
+    .notfound-wrapper-message {
+        font-size: xx-large;
+        color: var(--colorDarkWhite);
+        font-family: verdana;
+        font-weight: lighter;
+        text-align: center;
+    }
+
+    .notfound-wrapper-button {
+        padding: 1%;
+        border-radius: 20px;
+        color: var(--colorDarkWhite);
+        background: transparent;
+        border: transparent;
+        font-size: x-large;
+        transition: 1s ease-in-out;
+    }
+
+        .notfound-wrapper-button:hover {
+            cursor: pointer;
+            background-color: var(--pokedexRed);
+            transition: 1s ease-in-out;
+        }
                   
