--- a/src/index.css
+++ b/src/index.css
@@ -362,6 +362,7 @@ li {
         color: var(--colorDarkWhite);
         background-color: transparent;
         border: transparent;
+        margin-top: 1%;
         transition: 0.5s ease-in-out;
     }
 
@@ -645,7 +646,6 @@ li {
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-start;
-    
     background-image: url("../images/pokedex.gif");
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -656,18 +656,20 @@ li {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        align-items: flex-end;
+        flex-wrap: wrap;
+        align-items: center;
         align-content: center;
         height: 100%;
-        width: 40%;
+        width: 30%;
         gap: 20%;
+        margin: 1%;
         
     }
 
         .pokedex-header-message {
             font-size: 3rem;
             color: var(--pokedexRed);
-            width: 50%;
+            width: 100%;
             height: 20%;
             margin: 6%;
             padding: 5%;
@@ -675,7 +677,8 @@ li {
             font-family: verdana;
             text-align: center;
             animation: blinking 5s ease-in-out alternate infinite;
-            
+            padding: 5%;
+          
         }
 
             @keyframes blinking {
@@ -694,30 +697,30 @@ li {
 
 
         .pokedex-header-input-and-select {
-            width: 70%;
-            height: 1%;
+            width: 100%;
+            height: min-content;
             height: fit-content;
             display: flex;
             flex-direction: column;
-            gap: 3%;
-            justify-content: center;
-            align-items: center;
+            gap: 1%;
+            justify-content: right;
+            align-items: flex-end;
             color: var(--colorDarkWhite);
-            font-size: x-large;
+            font-size: large;
             margin-top: 15%;
-            
+            padding-top: 10%;
         }
 
             .pokedex-header-input {
-                width: 90%;
+                width: 78%;
                 text-align: center;
-                font-size: large;
+                font-size: small;
                 font-weight: bolder;
                 font-family: verdana;
                 background-color: transparent;
                 border-radius: 20px;
-                padding: 1%;
-                margin: 3%;
+                padding: 3%;
+                margin-top: 10%;
                 transition: 1s ease-in-out;
                 color: var(--colorDarkWhite);
             }
@@ -728,7 +731,7 @@ li {
                 }
 
             .pokedex-header-input-and-select > button {
-                font-size: large;
+                font-size: medium;
                 font-weight: lighter;
                 font-family: verdana;
                 padding: 2%;
@@ -738,6 +741,7 @@ li {
                 background-color: transparent;
                 margin-bottom: 4%;
                 transition: 1s ease-in-out;
+                align-self: center;
             }
 
                 .pokedex-header-input-and-select > button:hover {
@@ -769,7 +773,7 @@ li {
     .pokedex-body {
         height: 100%;
         width: 70%;
-        
+        padding-right: 5%;
     }
 
         .poke-card-wrapper {
@@ -788,8 +792,8 @@ li {
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                height: 20%;
-                width: 20%;
+                height: 25%;
+                width: 25%;
                 padding: 1%;
                 border-radius: 20px;
                 transition: 0.5s ease-in-out;
@@ -900,6 +904,26 @@ li {
     
 }
 
+    .pokedex-id-wrapper-button {
+        align-self: flex-start;
+        position: fixed;
+        padding: 1%;
+        border-radius: 20px;
+        font-size: small;
+        font-family: verdana;
+        color: var(--colorDarkWhite);
+        background-color: transparent;
+        border: transparent;
+        transition: 0.5s ease-in-out;
+    }
+
+        .pokedex-id-wrapper-button:hover {
+            cursor: pointer;
+            background-color: var(--colorDarkWhite);
+            color: var(--pokedexRed);
+            transition: 0.5s ease-in-out;
+        }
+
     .pokedex-id-wrapper-name-and-img {
         width: 50%;
         height: 90%;
@@ -963,7 +987,7 @@ li {
         }
 
             .pokedex-id-wrapper-type-wrapper > h4 {
-                font-size: x-large;
+                font-size: large;
                 font-family: verdana;
                 font-weight: lighter;
             }
@@ -975,7 +999,7 @@ li {
             }
 
                 .pokedex-id-wrapper-type-wrapper-types-wrapper > li {
-                    font-size: large;
+                    font-size: medium;
                     font-family: verdana;
                     font-weight: lighter;
                 }
@@ -995,7 +1019,7 @@ li {
         }
 
             .pokedex-id-wrapper-abilities-wrapper-title {
-                font-size: x-large;
+                font-size: large;
                 font-family: verdana;
                 font-weight: lighter;
             }
@@ -1007,7 +1031,7 @@ li {
             }
 
                 .pokedex-id-wrapper-abilities-wrapper-ability-wrapper > li {
-                    font-size: large;
+                    font-size: medium;
                     font-family: verdana;
                     font-weight: lighter;
                 }
@@ -1025,7 +1049,7 @@ li {
     }
 
         .pokedex-id-wrapper-moves-wrapper-title {
-            font-size: x-large;
+            font-size: large;
             font-family: verdana;
             font-weight: lighter;
             width: 100%;
@@ -1046,7 +1070,7 @@ li {
             .pokedex-id-wrapper-moves-wrapper-move-wrapper > li {
                 font-family: verdana;
                 font-weight: lighter;
-                font-size: large;
+                font-size: medium;
             }
 
 .notfound-wrapper {
@@ -1059,7 +1083,7 @@ li {
     width: 100%;
     height: 100%;
     gap: 5%;
-    background-image: url("../public/images/intro-poke.gif");
+    background-image: url("../images/intro-poke.gif");
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
