--- a/src/index.css
+++ b/src/index.css
@@ -1941,6 +1941,7 @@ li {
         .pokedex-body {
             height: 100vh;
             width: 100%;
+            padding-top: 7%;
             padding-right: 5%;
             background-image: url("../images/Pokedex-bottom.png");
             background-size: 100% 100%;
