--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,7 @@ li {
                     background-size: 100%;
                     transition: 0.5s ease-in-out;
                     color: transparent;
+                    cursor: pointer;
                 }
 
 
